<resources>
    <string name="app_name">SShop</string>
    <string name="btorder">새주문</string>
    <string name="btcheck">확인</string>
    <string name="btorderlist">주문현황</string>
    <string name="btordermanage">주문관리</string>
    <string name="textView">주문관리</string>
    <string name="tvdate">날짜</string>
    <string name="tvtodayorder">오늘 주문 건수 :</string>
    <string name="textView2">주문번호</string>
    <string name="cbtakeout">테이크아웃</string>
    <string name="btcancel">취소</string>
    <string name="textView03">메뉴관리</string>
    <string name="btorder01">추가</string>
    <string name="btorderlist01">돌아가기</string>
    <string name="textView04">주문현황</string>
    <string name="btdate">일자선택</string>
    <string name="btcal">계산</string>
    <string name="btodcancel">취소</string>
    <string name="bttable1">T1</string>
    <string name="bttable2">T2</string>
    <string name="bttable3">T3</string>
    <string name="tvrst">합계 :</string>
    <string name="bttable4">T4</string>

</resources>
