<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView04"
        android:textAlignment="center"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical">

            <Button
                android:id="@+id/btdate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btdate"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView05"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView03"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:text="TextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btorderlist01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btorderlist01" />

    </LinearLayout>

</LinearLayout>