<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView03"
        android:textAlignment="center"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Input Menu Name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Input Price"
                android:inputType="textPersonName" />
        </LinearLayout>

        <Button
            android:id="@+id/btorder01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btorder01"
            android:textAlignment="center" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView03"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:text="TextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btorderlist01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btorderlist01" />

    </LinearLayout>

</LinearLayout>